fix: keep dropship items out of the goods issue note